fixtures/runtime/valid/scalars/echo.php
<?php
// runtime-fixture: kind=valid expected_stdout="scalar echo\n"
echo "scalar echo\n";
