fixtures/runtime/invalid/runtime-error.php
<?php
// runtime-fixture: kind=invalid expected_reference=runtime_error
undefined_runtime_runtime_function();
